all finish to swagger UI testing